chore: update README

--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BSS Metrics API Client</title>
+    <title>Gthulhu API server Client</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>BSS Metrics API Client</h1>
+        <h1>Gthulhu API server Client</h1>
         <div class="auth-status" id="authStatus">
             <span id="authText">Not Authenticated</span>
             <button id="authBtn" onclick="showAuthModal()">Get Token</button>
